acceptance test without review and discount